# rs-redis-info2otel

./: .gitignore  Cargo.toml  README.md
examples/redis-info2prometheus/: Cargo.toml  run.sh  sample.toml
examples/redis-info2prometheus/src/: main.rs
src/: evt.rs  lib.rs  metrics.rs
tests/: integration_test.rs
