[package]
name = "rs-redis-info2otel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opentelemetry = {version="0.18.0", features=["metrics"]}

serde = {version="1.0.148", features=["derive"]}

toml = {version="0.5.9", optional=true}
serde_json = {version="1.0.89", optional=true}

[features]
config-json = ["serde_json"]
config-toml = ["toml"]
