[package]
name = "redis-info2prometheus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opentelemetry = {version="0.18.0", features=["metrics"]}

opentelemetry-prometheus = "0.11.0"
prometheus = "0.13.3"
redis = "0.22.1"
rs-redis-info2otel = { path = "../..", features=["config-toml"] }
